RESOLVED FIXED309693
[GLIB] WebProcess critical assertion during D-Bus RequestName completion on process shutdown
https://bugs.webkit.org/show_bug.cgi?id=309693
Summary [GLIB] WebProcess critical assertion during D-Bus RequestName completion on p...
Lauro Moura
Reported 2026-03-11 11:14:00 PDT
This is happening rather frequently during the WebDriver tests with the sandbox enabled, especially on tests that open and close pages quickly. A full test run triggers ~27 crashes, but as they happen after shutdown started, they don't make the test record a failure. During the WebProcess shutdown, we get the following message: (WPEWebProcess:1260459): GLib-GObject-CRITICAL **: g_object_ref: assertion 'G_IS_OBJECT (object)' failed Enabling DBUS logging shows: GDBus-debug:Call: <<<< ASYNC COMPLETE org.freedesktop.DBus.RequestName() FAILED: The connection is closed At first, I thought it was directly related to the sandbox, but it's actually related to the AccessibilityAtspi name request DBus callbacks being called after the WebProcess already started its shutdown process. Likely the sandbox overhead increases the chances of such condition. Tentative patch incoming.
Attachments
Lauro Moura
Comment 1 2026-03-11 17:12:22 PDT
EWS
Comment 2 2026-03-12 17:55:34 PDT
Committed 309174@main (57438b0e6983): <https://commits.webkit.org/309174@main> Reviewed commits have been landed. Closing PR #60411 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.