Source/WebKit/WebProcess/glib/WebProcessGLib.cpp
@@ -123,6 +123,10 @@ void WebProcess::stopRunLoop()
     if (auto* display = PlatformDisplay::sharedDisplayIfExists())
         display->clearGLContexts();
 
+#if USE(ATSPI)
+    AccessibilityAtspi::singleton().disconnect();
+#endif
+
     AuxiliaryProcess::stopRunLoop();
 }
 
